Añadido Resultados con JavaScript

--- a/estilo.css
+++ b/estilo.css
@@ -36,3 +36,35 @@ td{
 tr{
 
 }
+
+progress[value] {
+    /* Elimino la apariencia por defecto */
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+     
+    /* Quito el borde que aparece en Firefox */
+    border: none;
+ 
+    /* Añado mis propios estilos */
+    width: 270px;
+    height: 30px;
+    overflow:hidden;
+     
+/*  Estos estilos solo se aplicaran al fondo de la barra en mozilla */
+    border:1px inset #666;
+    background-color:#D8D8D8;
+    border-radius : 20px ;
+
+}
+
+progress::-webkit-progress-value {
+    background: #FF8000;
+    border-radius : 20px;  
+}
+ 
+progress::-webkit-progress-bar {
+    background-color:#D8D8D8;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25) inset; /*esta sombra es para simular el borde que he aplicado arriba para Mozilla*/
+    border-radius : 20px ;         
+}
